--- a/src/org/thinkit/web/css/portfolio.css
+++ b/src/org/thinkit/web/css/portfolio.css
@@ -13,6 +13,13 @@
  */
 #portfolio {
   background: #f5f5f5;
+  padding-bottom: 200px;
+}
+
+#portfolio h1 {
+  text-align: center;
+  margin-top: 50px;
+  margin-bottom: 20px;
 }
 
 #portfolio .container {
