--- a/src/org/thinkit/web/sass/portfolio.scss
+++ b/src/org/thinkit/web/sass/portfolio.scss
@@ -14,6 +14,13 @@
 
 #portfolio {
   background: #f5f5f5;
+  padding-bottom: 200px;
+
+  h1 {
+    text-align: center;
+    margin-top: 50px;
+    margin-bottom: 20px;
+  }
 
   .container {
     padding: 0;
