--- a/src/org/thinkit/web/css/index.css
+++ b/src/org/thinkit/web/css/index.css
@@ -1,7 +1,19 @@
+/*
+ * Copyright 2020 Kato Shinya.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
+ * in compliance with the License. You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software distributed under the License
+ * is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
+ * or implied. See the License for the specific language governing permissions and limitations under
+ * the License.
+ */
 /*---------------------
-  Common
------------------------*/
-
+    Common
+  -----------------------*/
 * {
   margin: 0px;
   padding: 0px;
@@ -18,22 +30,34 @@ body {
 }
 
 .flex {
-  align-items: center;
-  display: -webkit-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   display: -moz-flex;
   display: -ms-flex;
   display: -o-flex;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .flex.flex-row {
-  flex-direction: row;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
 }
 
 .flex.flex-wrap {
-  flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 h1,
@@ -92,8 +116,7 @@ textarea:focus {
   outline: none;
 }
 
-a:hover,
-a:focus {
+a:hover, a:focus {
   text-decoration: none;
   outline: none;
   color: #e31b6d;
@@ -112,9 +135,8 @@ ol {
 }
 
 /*---------------------
-  Button
------------------------*/
-
+    Button
+  -----------------------*/
 .button-color-white {
   background: transparent;
   border: 2px solid #fff;
@@ -123,7 +145,13 @@ ol {
   margin: 5px 0 0 0;
   outline: 0;
   padding: 10px 30px;
+  -webkit-transition: all 0.5s;
   transition: all 0.5s;
+}
+
+.button-color-white:focus, .button-color-white:hover {
+  background-color: #04c2c9;
+  border-color: #04c2c9;
 }
 
 .button-color-turquoise {
@@ -137,71 +165,24 @@ ol {
   margin: 5px 0 0 0;
   outline: 0;
   padding: 10px 30px;
+  -webkit-transition: all 0.5s;
   transition: all 0.5s;
   border-radius: 3px 15px 3px 15px;
 }
 
-.button-color-white:focus,
-.button-color-white:hover {
-  background-color: #04c2c9;
-  border-color: #04c2c9;
-}
-
-.button-color-turquoise:focus,
-.button-color-turquoise:hover {
+.button-color-turquoise:focus, .button-color-turquoise:hover {
   border: 2px solid #04c2c9;
   background-color: #04c2c9;
   color: #fff;
 }
 
-.primary-btn {
-  display: inline-block;
-  font-size: 15px;
-  text-transform: uppercase;
-  padding: 14px 25px 12px;
-  color: #ffffff;
-  background: #04c2c9;
-  letter-spacing: 2px;
-}
-
-.primary-btn.border-btn {
-  background: transparent;
-  border: 2px solid #04c2c9;
-  color: #111111;
-}
-
-.site-btn {
-  font-size: 15px;
-  color: #ffffff;
-  background: #04c2c9;
-  font-weight: 700;
-  letter-spacing: 2px;
-  border: none;
-  text-transform: uppercase;
-  display: inline-block;
-  padding: 14px 30px;
-  width: 100%;
-}
-
 /*---------------------
-  Section
------------------------*/
-
+    Section
+  -----------------------*/
 .section-title {
   margin-bottom: 40px;
   position: relative;
   z-index: 1;
-}
-
-.section-title.center-title {
-  text-align: center;
-}
-
-.section-title h2 {
-  font-size: 42px;
-  color: #111111;
-  font-weight: 700;
-  text-transform: uppercase;
 }
 
 .section-title h1 {
@@ -215,86 +196,46 @@ ol {
   z-index: -1;
 }
 
-/*---------------------
-  About
------------------------*/
-
-#about {
-  margin-top: 30px;
+.section-title h2 {
+  font-size: 42px;
+  color: #111111;
+  font-weight: 700;
+  text-transform: uppercase;
 }
 
-.about {
+/*---------------------
+    About
+  -----------------------*/
+#about {
+  margin-top: 30px;
   padding-top: 0;
 }
 
-.about h1 {
+#about h1 {
   text-align: center;
   margin-bottom: 20px;
 }
 
-.about.about--page {
-  padding-top: 80px;
-  padding-bottom: 80px;
-}
-
-.about.about--page .section-title {
-  margin-bottom: 28px;
-}
-
-.about.about--page .section-title h2 {
-  line-height: 55px;
-}
-
-.about.about--page .about--text {
-  padding-top: 15px;
-}
-
-.about.about--page .about--text p {
-  color: #111111;
-}
-
-.about--text {
+#about .about-text {
   padding-top: 70px;
 }
 
-.about--text p {
+#about .about-text p {
+  color: #111111;
   margin-bottom: 35px;
 }
 
-#picture-of-me img {
-  text-align: center;
-  margin-top: 20px;
-  margin-left: 70px;
-  width: 70%;
-  height: 70%;
+#about .about-text .section-title {
+  margin-bottom: 28px;
 }
 
-#picture-of-me .my-position {
-  text-align: center;
-  font-size: 20px;
-  margin-top: 25px;
-}
-
-#contact-me:focus,
-#contact-me:hover {
-  color: #fff;
+#about .about-text .section-title h2 {
+  line-height: 55px;
 }
 
 /*---------------------
-  Portfolio
------------------------*/
-
-#portfolio {
-  background-color: #f5f5f5;
-  padding-bottom: 200px;
-}
-
-.portfolio h1 {
-  text-align: center;
-  margin-top: 50px;
-  margin-bottom: 20px;
-}
-
+    Divider
+  -----------------------*/
 .white-divide {
   width: 100%;
   height: 126px;
@@ -387,9 +328,8 @@ ol {
 }
 
 /*---------------------
-  Helper CSS
------------------------*/
-
+    Helper CSS
+  -----------------------*/
 .section-title {
   margin-bottom: 40px;
   position: relative;
@@ -491,7 +431,8 @@ ol {
 
 #shooting-star .button {
   border: 2px solid #04c2c9;
-  box-sizing: inherit;
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
   cursor: pointer;
   display: inline-block;
   background: transparent;
@@ -501,6 +442,7 @@ ol {
   margin: 5px 0 0 0;
   outline: 0;
   padding: 10px 30px;
+  -webkit-transition: all 0.5s;
   transition: all 0.5s;
   border-radius: 3px 15px 3px 15px;
 }
@@ -545,3 +487,4 @@ ol {
     font-size: 60px;
   }
 }
+/*# sourceMappingURL=index.css.map */
