--- a/src/org/thinkit/web/sass/index.scss
+++ b/src/org/thinkit/web/sass/index.scss
@@ -304,36 +304,40 @@ ol {
   }
 }
 
-#copyright {
-  background-color: #2c3039;
-  text-align: center;
-}
+/*---------------------
+    footer
+  -----------------------*/
+#footer {
+  #copyright {
+    background-color: #2c3039;
+    text-align: center;
 
-#copyright p {
-  width: 100%;
-  padding: 30px 0px 30px 0px;
-  text-align: center;
-  font-size: 13px;
-  letter-spacing: 1px;
-  margin: 0px;
-}
+    p {
+      width: 100%;
+      padding: 30px 0px 30px 0px;
+      text-align: center;
+      font-size: 13px;
+      letter-spacing: 1px;
+      margin: 0px;
+    }
 
-#copyright .social-links {
-  margin-bottom: 10px;
-}
+    .social-links {
+      margin-bottom: 10px;
 
-#copyright .social-links a {
-  color: #ffffff !important;
-}
+      a {
+        color: #ffffff !important;
 
-#copyright .social-links a:hover {
-  color: #e31b6d !important;
+        &:hover {
+          color: #e31b6d !important;
+        }
+      }
+    }
+  }
 }
 
 /*---------------------
     Helper CSS
   -----------------------*/
-
 .section-title {
   margin-bottom: 40px;
   position: relative;
