--- a/src/org/thinkit/web/css/index.css
+++ b/src/org/thinkit/web/css/index.css
@@ -304,12 +304,15 @@ ol {
   padding: 0px;
 }
 
-#copyright {
+/*---------------------
+    footer
+  -----------------------*/
+#footer #copyright {
   background-color: #2c3039;
   text-align: center;
 }
 
-#copyright p {
+#footer #copyright p {
   width: 100%;
   padding: 30px 0px 30px 0px;
   text-align: center;
@@ -318,15 +321,15 @@ ol {
   margin: 0px;
 }
 
-#copyright .social-links {
+#footer #copyright .social-links {
   margin-bottom: 10px;
 }
 
-#copyright .social-links a {
+#footer #copyright .social-links a {
   color: #ffffff !important;
 }
 
-#copyright .social-links a:hover {
+#footer #copyright .social-links a:hover {
   color: #e31b6d !important;
 }
 
