--- a/src/org/thinkit/web/sass/shooting-star.scss
+++ b/src/org/thinkit/web/sass/shooting-star.scss
@@ -52,3 +52,12 @@
     }
   }
 }
+
+@media screen and (max-width: 480px) {
+  #shooting-star {
+    .button {
+      font-size: 12pt;
+      margin: 0px;
+    }
+  }
+}
