--- a/src/org/thinkit/web/css/contact.css
+++ b/src/org/thinkit/web/css/contact.css
@@ -24,11 +24,19 @@
   margin-top: 20px;
   font-size: 25px;
   color: #04c2c9;
+  margin-bottom: 10px;
 }
 
 #contact #contact-detail input,
 #contact #contact-detail textarea {
   font-size: 12pt;
+}
+
+#contact #contact-detail .header-divide-white {
+  width: 50px;
+  border-top: 3px solid #ffffff;
+  height: 20px;
+  margin-bottom: 10px;
 }
 
 #contact #contact-detail .fab {
@@ -47,5 +55,32 @@
   color: #ffffff;
   margin-top: -3px;
   padding: 0px;
+}
+
+@media screen and (max-width: 480px) {
+  #contact #contact-detail {
+    text-align: center;
+  }
+  #contact #contact-detail h6 {
+    margin-top: 20px;
+    font-size: 25px;
+  }
+  #contact #contact-detail .header-divide-white {
+    margin: 0 auto;
+    text-align: center;
+  }
+  #contact #contact-detail .fab {
+    color: #ffffff;
+    font-size: 25px !important;
+    padding-right: 10px;
+  }
+  #contact #contact-detail .far,
+  #contact #contact-detail .fas {
+    color: #ffffff;
+    font-size: 25px !important;
+  }
+  #contact #contact-detail .contact-info {
+    font-size: 16px;
+  }
 }
 /*# sourceMappingURL=contact.css.map */
