--- a/src/org/thinkit/web/sass/contact.scss
+++ b/src/org/thinkit/web/sass/contact.scss
@@ -70,6 +70,11 @@
         font-size: 25px;
       }
 
+      input,
+      textarea {
+        font-size: 10pt;
+      }
+
       .header-divide-white {
         margin: 0 auto;
         text-align: center;
