--- a/src/org/thinkit/web/sass/portfolio.scss
+++ b/src/org/thinkit/web/sass/portfolio.scss
@@ -149,6 +149,12 @@
 
 @media screen and (max-width: 480px) {
   #portfolio {
+    .filter-wrap {
+      .filter {
+        font-size: 15px;
+      }
+    }
+
     #gallery {
       .mix {
         width: 40%;
