--- a/src/org/thinkit/web/css/about.css
+++ b/src/org/thinkit/web/css/about.css
@@ -62,9 +62,15 @@
 }
 
 @media screen and (max-width: 480px) {
-  #about #mind-list .fas,
-  #about #mind-list .far {
-    font-size: 60px;
+  #about #mind-list .mind .fas,
+  #about #mind-list .mind .far {
+    font-size: 50px;
+  }
+  #about #mind-list .mind .mind-title {
+    font-size: 25px;
+  }
+  #about #mind-list .mind .mind-description {
+    font-size: 15px;
   }
 }
 /*# sourceMappingURL=about.css.map */
