--- a/src/org/thinkit/web/sass/barfiller.scss
+++ b/src/org/thinkit/web/sass/barfiller.scss
@@ -33,19 +33,6 @@
       -webkit-box-shadow: none;
       box-shadow: none;
 
-      .fill {
-        display: block;
-        position: relative;
-        width: 0px;
-        height: 100%;
-        background: #333;
-        z-index: 1;
-      }
-
-      .tipWrap {
-        display: none;
-      }
-
       .tip {
         margin-top: -32px;
         padding: 0;
@@ -53,18 +40,57 @@
         color: #04c2c9;
         background: transparent;
 
-        &&:after {
+        &:after {
           display: none;
-          border: solid;
-          border-color: rgba(0, 0, 0, 0.8) transparent;
-          border-width: 6px 6px 0 6px;
-          content: '';
-          display: block;
-          position: absolute;
-          left: 9px;
-          top: 100%;
-          z-index: 9;
         }
+      }
+    }
+  }
+
+  .barfiller {
+    width: 100%;
+    height: 12px;
+    background: #fcfcfc;
+    border: 1px solid #ccc;
+    position: relative;
+    margin-bottom: 20px;
+    -webkit-box-shadow: inset 1px 4px 9px -6px rgba(0, 0, 0, 0.5);
+    box-shadow: inset 1px 4px 9px -6px rgba(0, 0, 0, 0.5);
+    -moz-box-shadow: inset 1px 4px 9px -6px rgba(0, 0, 0, 0.5);
+
+    .fill {
+      display: block;
+      position: relative;
+      width: 0px;
+      height: 100%;
+      background: #333;
+      z-index: 1;
+    }
+
+    .tipWrap {
+      display: none;
+    }
+
+    .tip {
+      margin-top: -30px;
+      padding: 2px 4px;
+      font-size: 11px;
+      color: #04c2c9;
+      left: 0px;
+      position: absolute;
+      z-index: 2;
+      background: #333;
+
+      &:after {
+        border: solid;
+        border-color: rgba(0, 0, 0, 0.8) transparent;
+        border-width: 6px 6px 0 6px;
+        content: '';
+        display: block;
+        position: absolute;
+        left: 9px;
+        top: 100%;
+        z-index: 9;
       }
     }
   }
