--- a/src/org/thinkit/web/css/index.css
+++ b/src/org/thinkit/web/css/index.css
@@ -281,4 +281,16 @@ ol {
 .highlight-turquoise {
   color: #04c2c9;
 }
+
+@media screen and (max-width: 480px) {
+  p {
+    font-size: 12px;
+  }
+  .section-title h1 {
+    font-size: 80px;
+  }
+  .section-title h2 {
+    font-size: 35px;
+  }
+}
 /*# sourceMappingURL=index.css.map */
