--- a/src/org/thinkit/web/sass/index.scss
+++ b/src/org/thinkit/web/sass/index.scss
@@ -282,3 +282,19 @@ ol {
 .highlight-turquoise {
   color: #04c2c9;
 }
+
+@media screen and (max-width: 480px) {
+  p {
+    font-size: 12px;
+  }
+
+  .section-title {
+    h1 {
+      font-size: 80px;
+    }
+
+    h2 {
+      font-size: 35px;
+    }
+  }
+}
