--- a/src/org/thinkit/web/css/barfiller.css
+++ b/src/org/thinkit/web/css/barfiller.css
@@ -17,7 +17,7 @@
 
 #skill-bars .skill-bar-item p {
   font-size: 15px;
-  font-weight: 500;
+  font-weight: 1000;
   font-style: italic;
   color: #444957;
   margin-bottom: 10px;
@@ -85,7 +85,7 @@
   border: solid;
   border-color: rgba(0, 0, 0, 0.8) transparent;
   border-width: 6px 6px 0 6px;
-  content: '';
+  content: "";
   display: block;
   position: absolute;
   left: 9px;
