--- a/src/org/thinkit/web/sass/index.scss
+++ b/src/org/thinkit/web/sass/index.scss
@@ -31,6 +31,17 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+section {
+  position: relative;
+}
+
+.overflow-wrap {
+  height: 100vh;
+  width: 100vw;
+  position: relative;
+  overflow-x: hidden;
+}
+
 .flex {
   align-items: center;
   display: -webkit-flex;
