--- a/src/org/thinkit/web/css/index.css
+++ b/src/org/thinkit/web/css/index.css
@@ -29,22 +29,21 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-body {
-  overflow-x: hidden !important;
-}
-
 section {
   position: relative;
 }
 
 .overflow-wrap {
-  overflow-x: hidden !important;
+  height: 100vh;
+  width: 100vw;
+  position: relative;
+  overflow-x: hidden;
 }
 
 .flex {
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   display: -moz-flex;
   display: -ms-flex;
   display: -o-flex;
@@ -53,23 +52,23 @@ section {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .flex.flex-row {
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-  -ms-flex-direction: row;
-  flex-direction: row;
+      -ms-flex-direction: row;
+          flex-direction: row;
 }
 
 .flex.flex-wrap {
   -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 h1,
@@ -128,8 +127,7 @@ textarea:focus {
   outline: none;
 }
 
-a:hover,
-a:focus {
+a:hover, a:focus {
   text-decoration: none;
   outline: none;
   color: #e31b6d;
@@ -162,8 +160,7 @@ ol {
   transition: all 0.5s;
 }
 
-.button-color-white:focus,
-.button-color-white:hover {
+.button-color-white:focus, .button-color-white:hover {
   background-color: #04c2c9;
   border-color: #04c2c9;
 }
@@ -184,8 +181,7 @@ ol {
   border-radius: 3px 15px 3px 15px;
 }
 
-.button-color-turquoise:focus,
-.button-color-turquoise:hover {
+.button-color-turquoise:focus, .button-color-turquoise:hover {
   border: 2px solid #04c2c9;
   background-color: #04c2c9;
   color: #fff;
@@ -263,19 +259,21 @@ ol {
 #footer #copyright {
   background-color: #2c3039;
   text-align: center;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 
 #footer #copyright p {
   width: 100%;
-  padding: 30px 0px 30px 0px;
+  padding: 0px;
   text-align: center;
   font-size: 13px;
   letter-spacing: 1px;
-  margin: 0px;
+  margin-top: 0px;
 }
 
 #footer #copyright .social-links {
-  margin-bottom: 10px;
+  margin-bottom: 0px;
 }
 
 #footer #copyright .social-links a {
