--- a/src/org/thinkit/web/sass/index.scss
+++ b/src/org/thinkit/web/sass/index.scss
@@ -25,7 +25,7 @@ html,
 body {
   height: 100%;
   color: #fff;
-  font-family: "Now Regular";
+  font-family: Raleway;
   font-size: 8pt;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -92,7 +92,7 @@ h6 {
 
 p {
   font-size: 15px;
-  font-family: "Now Regular";
+  font-family: Raleway;
   color: #444444;
   font-weight: 400;
   line-height: 26px;
